Update with latest changes from personal repo

--- a/.env
+++ b/.env
@@ -5,3 +5,12 @@ VITE_SUPABASE_URL=https://micubdnfqphikrlirndo.supabase.co
 REACT_APP_EMAILJS_SERVICE_ID=service_hawbvoo
 REACT_APP_EMAILJS_TEMPLATE_ID=template_s26qe9i
 REACT_APP_EMAILJS_PUBLIC_KEY=It0JX4vH58DNrwU1w
+
+
+VITE_FIREBASE_API_KEY=AIzaSyDBaanyt2iiss_G8z4kxryKe-PLk9kjac0
+VITE_FIREBASE_AUTH_DOMAIN=neuraverse-dd516.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=neuraverse-dd516
+VITE_FIREBASE_STORAGE_BUCKET=neuraverse-dd516.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=643324426477
+VITE_FIREBASE_APP_ID=1:643324426477:web:168698348fc3e6a3ca74e4
+MEASUREMENT_ID=G-TMRPWVTLW4
