--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^3.6.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.6.0",
     "framer-motion": "^11.0.8",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
