--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ REACT_APP_EMAILJS_PUBLIC_KEY=It0JX4vH58DNrwU1w
 
 
 VITE_FIREBASE_API_KEY=AIzaSyDBaanyt2iiss_G8z4kxryKe-PLk9kjac0
-VITE_FIREBASE_AUTH_DOMAIN=neuraverse.vercel.app
+VITE_FIREBASE_AUTH_DOMAIN=neuraverse-dd516.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=neuraverse-dd516
 VITE_FIREBASE_STORAGE_BUCKET=neuraverse-dd516.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=643324426477
